JAVA-2507: Replace use of javax.xml.bind.DatatypeConverter for Base64 encoding and decoding with org.bson.internal.Base64