@@ -21,6 +21,7 @@ import com.mongodb.Bytes;
 import com.mongodb.DBObject;
 import com.mongodb.DBRef;
 import org.bson.BsonUndefined;
+import org.bson.internal.Base64;
 import org.bson.types.BSONTimestamp;
 import org.bson.types.Binary;
 import org.bson.types.Code;
@@ -31,7 +32,6 @@ import org.bson.types.MinKey;
 import org.bson.types.ObjectId;
 import org.bson.types.Symbol;
 
-import javax.xml.bind.DatatypeConverter;
 import java.lang.reflect.Array;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -474,7 +474,7 @@ public class JSONSerializers {
 
         protected void serialize(final byte[] bytes, final byte type, final StringBuilder buf) {
             DBObject temp = new BasicDBObject();
-            temp.put("$binary", DatatypeConverter.printBase64Binary(bytes));
+            temp.put("$binary", Base64.encode(bytes));
             temp.put("$type", type);
             serializer.serialize(temp, buf);
         }
